<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.CreateCandidateAcademicInfoActivity">
<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoaplicacion2"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <LinearLayout
            android:id="@+id/botones_arriba"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tituloVentana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingBottom="5dp"
                android:text="@string/TechnicalInfoTitle"
                android:textColor="@color/negroAOC"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/inferior"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="22dp"
        android:orientation="vertical"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/botones_abajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/superior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LabelNameCreateTechnicalRoles"
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />


            </LinearLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/campotexto"
                android:ems="10"
                android:inputType="textCapCharacters"
                android:minHeight="48dp"
                android:hint="@string/placeRoleNameCreateTechnicalRole"
                android:textColor="@color/Gris80AOC"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LabelExperienceCreateTechnicalRoles"
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />


            </LinearLayout>

            <EditText
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/campotexto"
                android:ems="10"
                android:hint="@string/placeExperienceCreateTechnicalRole"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/Gris80AOC"
                android:textSize="14sp" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">


            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LabelDescriptionAcademicInfo"
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/campotexto"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/placeDescriptionAcademicInfo"
                android:minHeight="48dp"
                android:lines="5"
                android:scrollbars="vertical"
                android:textColor="@color/Gris80AOC"
                android:scrollbarStyle="insideInset"
                android:textSize="14sp" />

        </LinearLayout>
        </ScrollView>
    </LinearLayout>




<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/botones_abajo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/createCandidateTechnicalRoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:clickable="true"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/botoncompuestoazul"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createAcademicInfoAcceptButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/BotonAceptarDesc"
                    android:minHeight="22sp"
                    android:text="@string/BotonAceptar"
                    android:textColor="@color/blancoAOC"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/BotonCrearDesc"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/ic_aceptar" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cancelCreateCandidateTechnicalRoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:clickable="true"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/botoncompuestoazul"
                android:baselineAligned="false"
                android:clickable="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BotonCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/BotonCancelarDesc"
                    android:minHeight="22sp"
                    android:text="@string/BotonCancelar"
                    android:textColor="@color/blancoAOC"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imagenCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/BotonCancelarDesc"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/ic_cancelar" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>